--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="./src/assets/specter_shoes_logo.jpg">
     <link rel="stylesheet" href="./src/assets/styles/style.css">
     <title>Specter Shoes</title>
 </head>
 <body>
-    
+    <div class="header-container">
+        <div class="logo-name-container">
+            <img src="./src/assets/specter_shoes_logo.jpg" alt="Logo de Specter Shoes">
+            <h1>Specter Shoes</h1>
+        </div>
+        <div class="search-input">
+            <input type="text" placeholder="Buscar...">
+        </div>
+    </div> 
 </body>
 </html>
