Fusión de ficheros

--- a/index.html
+++ b/index.html
@@ -22,5 +22,18 @@
             <input type="text" placeholder="Buscar...">
         </div>
     </div> 
+    
+    <div class="container-table">
+        <div class="btn-shoes">
+            <button class="btn-new-product">Nuevo Producto</button>
+        </div>
+        <div class="headers-container">
+            <p class="table-header">Lista productos</p>
+            <p class="table-header">Fecha creación</p>
+            <p class="table-header">Fecha última modificación</p>
+        </div>
+    </div>
+
+
 </body>
 </html>
