--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="./src/assets/specter_shoes_logo.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./src/assets/styles/style.css">
     <title>Specter Shoes</title>
 </head>
@@ -25,15 +26,76 @@
     
     <div class="container-table">
         <div class="btn-shoes">
-            <button class="btn-new-product">Nuevo Producto</button>
+            <button class="btn-new-product" data-bs-toggle="modal" data-bs-target="#createItem">Nuevo Producto</button>
         </div>
         <div class="headers-container">
             <p class="table-header">Lista productos</p>
             <p class="table-header">Fecha creación</p>
             <p class="table-header">Fecha última modificación</p>
         </div>
+        <div class="table-content">
+
+        </div>
     </div>
 
+    <!-- Modal para agregar producto -->
+    <div class="modal fade" id="createItem" tabindex="-1" aria-labelledby="createItemLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <!-- Encabezado del modal -->
+            <div class="modal-header">
+              <h5 class="modal-title" id="createItemLabel">Crear item</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <!-- Cuerpo del modal -->
+            <div id="buttons-selection">
+                <h2>Seleccione el tipo de item</h2>
+                <div class="buttons-selection">
+                  <button type="button" id="simple-btn" class="btn btn-primary">Item simple</button>
+                  <button type="button" id="visual-btn" class="btn btn-primary">Item visual</button>
+                </div>
+            </div>
+            <!-- Item simple -->
+            <div id="item-simple-form" class="modal-body">
+              <label for="create-simple-name">Nombre</label>
+              <input type="text" class="form-control" id="simple-name" placeholder="Ingrese el nombre del producto">
 
+              <label for="create-simple-description">Descripción</label>
+              <textarea class="form-control" id="create-simple-description" placeholder="Ingrese la descripción del producto"></textarea>
+
+              <label for="create-simple-creationDate">Fecha de creación</label>
+              <input type="date" class="form-control" id="create-simple-creationDate" value="" disabled>
+
+              <label for="create-simple-modificationDate">Fecha de modificación</label>
+              <input type="date" class="form-control" id="create-simple-modificationDate" value="" disabled>
+            </div>
+            <!-- Item visual -->
+            <div id="item-visual-form" class="modal-body">
+              <label for="create-visual-name">Nombre</label>
+              <input type="text" class="form-control" id="create-visual-name" placeholder="Ingrese el nombre del producto">
+
+              <label for="create-visual-description">Descripción</label>
+              <textarea class="form-control" id="create-visual-description" placeholder="Ingrese la descripción del producto"></textarea>
+
+              <label for="create-visual-creationDate">Fecha de creación</label>
+              <input type="date" class="form-control" id="create-visual-creationDate" value="" disabled>
+
+              <label for="create-visual-modificationDate">Fecha de modificación</label>
+              <input type="date" class="form-control" id="create-visual-modificationDate" value="" disabled>
+
+              <label for="create-visual-imageURL">Imagen</label>
+              <input type="text" class="form-control" id="create-visual-imageURL" placeholder="Ingrese la URL de la imagen">
+            </div>
+            <!-- Pie de página del modal -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              <button type="button" id="create-item" class="btn btn-primary">Crear item</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
 </body>
 </html>
