--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <div class="container-table">
         <div class="btn-shoes">
-            <button class="btn-new-product" data-bs-toggle="modal" data-bs-target="#createItem">Nuevo Producto</button>
+            <button class="btn-new-item" data-bs-toggle="modal" data-bs-target="#createItem">Nuevo Producto</button>
         </div>
         <div class="headers-container">
             <p class="table-header">Lista productos</p>
@@ -58,7 +58,7 @@
             <!-- Item simple -->
             <div id="item-simple-form" class="modal-body">
               <label for="create-simple-name">Nombre</label>
-              <input type="text" class="form-control" id="simple-name" placeholder="Ingrese el nombre del producto">
+              <input type="text" class="form-control" id="create-simple-name" placeholder="Ingrese el nombre del producto">
 
               <label for="create-simple-description">Descripción</label>
               <textarea class="form-control" id="create-simple-description" placeholder="Ingrese la descripción del producto"></textarea>
@@ -95,6 +95,7 @@
         </div>
       </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./src/js/main.js"></script>
 </body>
