Estilos del los titulos de la tabla

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <button class="btn-new-item" data-bs-toggle="modal" data-bs-target="#createItem">Nuevo Producto</button>
         </div>
         <div class="headers-container">
-            <p class="table-header">Lista productos</p>
-            <p class="table-header">Fecha creación</p>
-            <p class="table-header">Fecha última modificación</p>
+            <p class="product-list-header table-header">Lista productos</p>
+            <p class="creation-date-header table-header">Fecha creación</p>
+            <p class="modification-date-header table-header">Fecha última modificación</p>
         </div>
         <div class="table-content">
 
