Filtro funcionando e input cambiado de posición

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
             <img src="./src/assets/specter_shoes_logo.jpg" alt="Logo de Specter Shoes">
             <h1>Specter Shoes</h1>
         </div>
-        <div class="search-input">
-            <i class="fas fa-search fa-lg"></i>
-            <input type="text" placeholder="Buscar...">
-        </div>
     </div> 
     
     <div class="container-table">
-        <div class="btn-shoes">
-            <button class="btn-new-item" data-bs-toggle="modal" data-bs-target="#createItem">Nuevo Producto</button>
+        <div class="btn-and-search-div">
+            <div class="btn-shoes">
+              <button class="btn-new-item" data-bs-toggle="modal" data-bs-target="#createItem">Nuevo Producto</button>
+            </div>
+            <div class="search-input">
+                <i class="fas fa-search fa-lg"></i>
+                <input id="searchInput" type="text" placeholder="Buscar...">
+            </div>
         </div>
         <div class="headers-container">
             <p class="product-list-header table-header">Lista productos</p>
