Apertura del modal de edición de item

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <!-- Item simple -->
-          <div id="item-simple-form" class="modal-body">
+          <div id="update-item-simple-form" class="modal-body">
             <label for="update-simple-name">Nombre</label>
             <input type="text" class="form-control" id="update-simple-name" placeholder="Ingrese el nombre del producto">
 
@@ -121,7 +121,7 @@
             <input type="date" class="form-control" id="update-simple-modificationDate" value="" disabled>
           </div>
           <!-- Item visual -->
-          <div id="item-visual-form" class="modal-body">
+          <div id="update-item-visual-form" class="modal-body">
             <label for="update-visual-name">Nombre</label>
             <input type="text" class="form-control" id="update-visual-name" placeholder="Ingrese el nombre del producto">
 
